2009-03-11  Matthias Klose  <doko@ubuntu.com>

	* patches/hotspot/default/icedtea-params-cast-size_t.patch: Update for
	recent hotspot.
	* patches/hotspot/default/icedtea-use-idx_t.patch: Likewise.

2009-03-11  Matthias Klose  <doko@ubuntu.com>

	* patches/hotspot/default/icedtea-includedb.patch: Add missing include in
	openjdk/hotspot/src/share/vm/includeDB_core.

2009-03-11  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkIntrinsics.hpp: New file.
	* ports/hotspot/src/share/vm/shark/sharkIntrinsics.cpp: Likewise.

	* ports/hotspot/src/share/vm/shark/shark_globals.hpp
	(SharkPerformanceWarnings): New flag.

	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp
	(SharkBuilder::_llvm_cmpxchg_int_fn): New field.
	(SharkBuilder::_llvm_sin_fn): Likewise.
	(SharkBuilder::_llvm_cos_fn): Likewise.
	(SharkBuilder::_llvm_sqrt_fn): Likewise.
	(SharkBuilder::_llvm_log_fn): Likewise.
	(SharkBuilder::_llvm_log10_fn): Likewise.
	(SharkBuilder::_llvm_pow_fn): Likewise.
	(SharkBuilder::_llvm_exp_fn): Likewise.
	(SharkBuilder::set_llvm_cmpxchg_int_fn): New method.
	(SharkBuilder::set_llvm_sin_fn): Likewise.
	(SharkBuilder::set_llvm_cos_fn): Likewise.
	(SharkBuilder::set_llvm_sqrt_fn): Likewise.
	(SharkBuilder::set_llvm_log_fn): Likewise.
	(SharkBuilder::set_llvm_log10_fn): Likewise.
	(SharkBuilder::set_llvm_pow_fn): Likewise.
	(SharkBuilder::set_llvm_exp_fn): Likewise.
	(SharkBuilder::llvm_cmpxchg_int_fn): Likewise.
	(SharkBuilder::llvm_sin_fn): Likewise.
	(SharkBuilder::llvm_cos_fn): Likewise.
	(SharkBuilder::llvm_sqrt_fn): Likewise.
	(SharkBuilder::llvm_log_fn): Likewise.
	(SharkBuilder::llvm_log10_fn): Likewise.
	(SharkBuilder::llvm_pow_fn): Likewise.
	(SharkBuilder::llvm_exp_fn): Likewise.
	(SharkBuilder::CreateCmpxchgInt): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(SharkBuilder::init_external_functions): Initialize new fields.
	(SharkBuilder::CreateCmpxchgInt): New method.
	
	* ports/hotspot/src/share/vm/shark/sharkRuntime.hpp